--- a/templates/search.html
+++ b/templates/search.html
@@ -18,10 +18,12 @@
 
             <select name="locale" required>
                 <option value="" disabled>Choose country</option>
-                {% for locale in locales %}
-                <option value="{{locale.name}}">{{locale.name}}</option>
+                {% for locale_option in all_locales %}
+                <option value="{{locale_option.alpha_2}}">{{locale_option.name}}</option>
                 {% endfor %}
             </select><br/>
+
+            Locale: {{locale}}
 
             <input type="submit" value="Search">
         </form>
@@ -43,7 +45,7 @@
                 <td>{{media.id}}</td>
                 <td><img src="{{media.poster_path}}"/></td>
                 <td>{{media.media_type.value}}</td>
-                <td><a href="http://localhost:5000/providers?id={{media.id}}&title={{media.title}}&media_type={{media.media_type.value}}">{{media.title}}</a></td>
+                <td><a href="http://localhost:5000/providers?id={{media.id}}&title={{media.title}}&media_type={{media.media_type.value}}&locale_code={{locale.alpha_2}}">{{media.title}}</a></td>
                 <td>{{media.overview}}</td>
                 <td>{{media.popularity}}</td>
             </tr>
