--- a/templates/search.html
+++ b/templates/search.html
@@ -14,8 +14,7 @@
         <img src="/static/backicon.png" height="60" onclick="history.go(-1)"/>
     </form>
 
-    <body>
-        <h3 style="font-family: 'K2D';font-size: 50px;font-weight:900;text-align: center;color: black;">Universal Streaming Search</h1><br><br><br>
+        <h1 style="font-family: 'K2D';font-size: 50px;font-weight:900;text-align: center;color: black;">Universal Streaming Search</h1><br><br><br>
         <body style="background-color: rgb(255, 224, 230);">
 
         <p style="padding-bottom: 20px; "></p>
@@ -35,7 +34,7 @@
                 <td>{{media.id}}</td>
                 <td><img src="{{media.poster_path}}"/></td>
                 <td>{{media.media_type.value}}</td>
-                <td><a href="http://localhost:5000/providers?id={{media.id}}&title={{media.title}}&media_type={{media.media_type.value}}&locale_code={{locale.alpha_2}}">{{media.title}}</a></td>
+                <td><a href="http://localhost:5000/providers?id={{media.id}}&title={{media.title}}&media_type={{media.media_type.value}}">{{media.title}}</a></td>
                 <td>{{media.overview}}</td>
                 <td>{{media.popularity}}</td>
             </tr>
