changed searchicon in main.html

--- a/templates/main.html
+++ b/templates/main.html
@@ -35,7 +35,7 @@
             <br><br><br><br><br>
 
             <button type="submit" class="btn btn-primary">
-                <img src="/static/searchicon1.png" height="100"/>
+                <img src="/static/searchicon.png" height="100"/>
                 <i class="icon-user icon-white"></i>
             </button>
         </form>
