--- a/templates/main.html
+++ b/templates/main.html
@@ -8,21 +8,44 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <style>
+          button{
+            border: none;
+            cursor: pointer;
+            appearance: none;
+            background-color: inherit;
+             transition: transform .7s ease-in-out;
+            margin-left:10px;
+          }
+          button:hover{
+            transform: rotate(360deg);
+          }
+          #but{
+            width: 200px;
+            height: 150px;
+            border: none;
+            margin-top: -20px;
+          }
+          .text{
+            font-size:60px;
+            color:#314de4;
+            font-family:Arial;
+          }
+        </style>
     </head>
 
-    <body>
+    <body style="background-image: url(/static/Moviebackground_blur.jpg);">
         <br><br>
         
         <form>
             <center><img src="/static/UniStreamSearch.png" height="100" width="700"></center>
         </form>
-
-        <body style="background-image: url(/static/Moviebackground.png);">
         
         <br><br>
 
-        <form action="http://localhost:5000/search" method="POST" style="padding: 20px; text-align: center;">
-            <input type="text" name="search" placeholder="Enter movie or TV show" size=90 style="height: 50px; width: 700px; text-align: center; font-size: 25px;" required>
+        <form action="http://localhost:5000/search" method="POST" style="padding: 30px; text-align: center; margin-top: 40px;">
+            <input type="text" name="search" placeholder="Enter movie or TV show" size=90 style="height: 60px; width: 700px; text-align: center; font-size: 25px;" required>
             <br><br><br><br><br>
 
             <select name="locale" style="height: 35px;" required>
@@ -34,9 +57,8 @@
 
             <br><br><br><br><br>
 
-            <button type="submit" class="btn btn-primary">
-                <img src="/static/searchicon.png" height="100"/>
-                <i class="icon-user icon-white"></i>
+            <button type="submit">
+                <img id="but" src="/static/search-icon-blue.png"/>
             </button>
         </form>
 
