--- a/templates/main.html
+++ b/templates/main.html
@@ -18,9 +18,6 @@
              transition: transform .7s ease-in-out;
             margin-left:10px;
           }
-          button:hover{
-            transform: rotate(360deg);
-          }
           #but{
             width: 200px;
             height: 150px;
@@ -35,7 +32,7 @@
         </style>
     </head>
 
-    <body style="background-image: url(/static/Moviebackground_blur.jpg);">
+    <body style="background-image: url(/static/Moviebackground.png);">
         <br><br>
         
         <form>
