--- a/templates/providers.html
+++ b/templates/providers.html
@@ -36,6 +36,34 @@
         height: 214px;
         position: relative;
     }
+    /* Child Text Container */
+    .movie-image div{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        background: black;
+        color: white;
+        margin-bottom: 5px;
+        font-family: sans-serif;
+        width: 152px;
+        opacity: 0;
+        visibility: hidden;
+        -webkit-transition: visibility 0s, opacity 0.5s linear;
+        transition: visibility 0s, opacity 0.5s linear;
+    }
+
+    /* Hover on Parent Container */
+    .movie-image:hover{
+        cursor: pointer;
+    }
+
+    .movie-image:hover div{
+        width: 162px;
+        padding: 8px 15px;
+        visibility: visible;
+        opacity: 0.9;
+    }
+
   </style>
 
     <body style="margin: 150px;">
@@ -50,6 +78,7 @@
                 <div class="c">
                     <div class="movie-image">
                         <img class="media" src="{{provider.logo_path}}"/>
+                        <div>{{provider.name}}</div>
                     </div>
                 </div>
             {% endfor %}
@@ -67,6 +96,7 @@
             <div class="c">
                 <div class="movie-image">
                     <img class="media"  src="{{provider.logo_path}}"/>
+                    <div>{{provider.name}}</div>
                 </div>
             </div>
         {% endfor %}
@@ -85,6 +115,7 @@
             <div class="c">
                 <div class="movie-image">
                     <img class="media"  src="{{provider.logo_path}}"/>
+                    <div>{{provider.name}}</div>
                 </div>
             </div>
         {% endfor %}
