--- a/templates/movies_list.html
+++ b/templates/movies_list.html
@@ -23,6 +23,7 @@
       position: relative;
       z-index:2;
       display:inline;
+      border: 6px solid white;
     }
     body{
       background: -webkit-linear-gradient(top left, rgba(0, 0, 0,1) 0%, rgba(10,10,10,1) 16%, rgba(50,50,50,1) 46%, rgba(80,80,80,1) 77%, rgba(110,110,110,1) 95%, rgba(150,150,150,1) 100%);
