--- a/templates/main.html
+++ b/templates/main.html
@@ -76,7 +76,7 @@
 
         <br><br>
 
-        <form action="http://localhost:5000/search" method="POST" style="padding: 30px; text-align: center; margin-top: 40px;">
+        <form action="https://localhost:5000/search" method="POST" style="padding: 30px; text-align: center; margin-top: 40px;">
             <input type="text" name="search" placeholder="Enter movie or TV show" size=90 style="height: 60px; width: 700px; text-align: center; font-size: 25px;" required>
             <br><br><br><br><br>
 
