--- a/templates/search.html
+++ b/templates/search.html
@@ -34,7 +34,7 @@
                 <td>{{media.id}}</td>
                 <td><img src="{{media.poster_path}}"/></td>
                 <td>{{media.media_type.value}}</td>
-                <td><a href="http://localhost:5000/providers?id={{media.id}}&title={{media.title}}&media_type={{media.media_type.value}}">{{media.title}}</a></td>
+                <td><a href="https://localhost:5000/providers?id={{media.id}}&title={{media.title}}&media_type={{media.media_type.value}}">{{media.title}}</a></td>
                 <td>{{media.overview}}</td>
                 <td>{{media.popularity}}</td>
             </tr>
